♻️: 알림 이슈 처리
